--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,17 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'kotlinx-serialization'
 }
 
 android {
     namespace 'com.kasirtoko'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.kasirtoko"
         minSdk 28
-        targetSdk 34
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -30,12 +31,12 @@ android {
     }
     
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     
     buildFeatures {
@@ -47,77 +48,86 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += '/META-INF/INDEX.LIST'
+            excludes += '/META-INF/DEPENDENCIES'
         }
     }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.8.5'
     
     // Room Database
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.room:room-runtime:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    kapt 'androidx.room:room-compiler:2.6.1'
     
     // ViewModel & LiveData
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
     
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.4'
     
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1'
     
-    // Supabase
-    implementation 'io.github.jan-tennert.supabase:postgrest-kt:2.0.4'
-    implementation 'io.github.jan-tennert.supabase:realtime-kt:2.0.4'
-    implementation 'io.ktor:ktor-client-android:2.3.6'
-    implementation 'io.ktor:ktor-client-core:2.3.6'
-    implementation 'io.ktor:ktor-utils:2.3.6'
+    // Supabase 3.2.3
+    implementation 'io.github.jan-tennert.supabase:postgrest-kt:3.2.3'
+    implementation 'io.github.jan-tennert.supabase:gotrue-kt:3.2.3'
+    implementation 'io.github.jan-tennert.supabase:realtime-kt:3.2.3'
+    implementation 'io.github.jan-tennert.supabase:storage-kt:3.2.3'
+    
+    // Ktor Client
+    implementation 'io.ktor:ktor-client-android:3.0.1'
+    implementation 'io.ktor:ktor-client-core:3.0.1'
+    implementation 'io.ktor:ktor-utils:3.0.1'
+    implementation 'io.ktor:ktor-client-logging:3.0.1'
+    
+    // Kotlinx Serialization
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.6.1'
     
     // Barcode Scanner (ML Kit)
-    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
     
     // Camera
-    implementation 'androidx.camera:camera-camera2:1.3.0'
-    implementation 'androidx.camera:camera-lifecycle:1.3.0'
-    implementation 'androidx.camera:camera-view:1.3.0'
+    implementation 'androidx.camera:camera-camera2:1.4.0'
+    implementation 'androidx.camera:camera-lifecycle:1.4.0'
+    implementation 'androidx.camera:camera-view:1.4.0'
     
     // Bluetooth Printer
     implementation 'com.github.DantSu:ESCPOS-ThermalPrinter-Android:3.3.0'
     
     // CSV
-    implementation 'com.opencsv:opencsv:5.8'
+    implementation 'com.opencsv:opencsv:5.9'
     
     // PDF
-    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'com.itextpdf:itextpdf:5.5.13.4'
     
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     kapt 'com.github.bumptech.glide:compiler:4.16.0'
     
-    // Work Manager (for background sync)
-    implementation 'androidx.work:work-runtime-ktx:2.9.0'
-    
-    // Networking
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
-    
-    // Gson
-    implementation 'com.google.code.gson:gson:2.10.1'
+    // Work Manager
+    implementation 'androidx.work:work-runtime-ktx:2.9.1'
     
     // Permission handling
     implementation 'pub.devrel:easypermissions:3.0.0'
     
+    // Date/Time picker
+    implementation 'com.google.android.material:material:1.12.0'
+    
     // Testing
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
